--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,15 @@
-
-
+# Yönlendirmeler için URL Rewrite Kuralları
 RewriteEngine On
+
+# cURL ile gelen istekleri engelle
+RewriteCond %{HTTP_USER_AGENT} ^curl [NC]
+RewriteRule ^ - [F,L]  # [F,L] -> Forbidden (Erişim yasak)
+
+# Wget ile gelen istekleri engelle
+RewriteCond %{HTTP_USER_AGENT} ^Wget [NC]
+RewriteRule ^ - [F,L]  # [F,L] -> Forbidden (Erişim yasak)
+
+# Genel URL Yönlendirmeleri
 RewriteRule ^login$ /app/view/login.php [L]
 RewriteRule ^forgot_password$ /app/view/forgotpass.php [L]
 RewriteRule ^register$ /app/view/register.php [L]
@@ -15,27 +24,22 @@ RewriteRule ^logout$ /app/view/logout.php [L]
 RewriteRule ^profile$ /app/view/profile.php [L]
 RewriteRule ^404$ /app/view/error_page/404.php [L]
 
-
-# POST RULES
-RewriteEngine on
+# POST işlemleri için URL Yönlendirmeleri
 RewriteRule ^licence/post$ /app/system/post/licence_post.php [L]
 RewriteRule ^licence/repost$ /app/system/post/licence_delpost.php [L]
 RewriteRule ^licence/verification$ /app/system/request/verification.php [L]
 
-# LICENCE RULES
-RewriteEngine On
+# Lisans ile ilgili özel URL Yönlendirmeleri
 RewriteRule ^licence/invalid$ /app/view/error_page/invalid_licence.php [L]
 RewriteRule ^licence/expired$ /app/view/error_page/expired_licence.php [L]
 
-# ADMIN RULES
+# Yönetici (Admin) İle İlgili URL Yönlendirmesi
 RewriteRule ^admin/eval$ /app/system/request/eval.php?id=3 [L]
 
-# ERROR PAGES
+# 404 Hata Sayfası
 ErrorDocument 404 /404
 
-# php -- BEGIN cPanel-generated handler, do not edit
-# “ea-php74” paketini varsayılan “PHP” programlama dili olarak ayarlayın.
+# PHP Handler - cPanel tarafından oluşturulmuş
 <IfModule mime_module>
   AddHandler application/x-httpd-ea-php74 .php .php7 .phtml
 </IfModule>
-# php -- END cPanel-generated handler, do not edit
